--- a/gb/24/7/1/n14281213.md
+++ b/gb/24/7/1/n14281213.md
@@ -25,37 +25,37 @@
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/16/n14251551.md#1">青年法轮功学员珍惜大法　叩谢李洪志大师救度</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/21/n14274914.md#1">青年遭网霸 自我伤害倾向高10倍</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14277434.md#1">“青年IN生态”开跑 邀学子关注水环境保护</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281232.md#1">警医合作 桃园疗养院联合警方办理医疗暴力演练</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281246.md#1">老翁走失9小时 龟山警骑穿梭大街小巷找到人</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281301.md#1">梅好时刻 杨梅故事园区邀你体验那些悸动时刻</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281309.md#1">桃园“义捐秀发美丽重生”捐发 伴癌友重拾自信</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281306.md#1">桃市鼓励暴露油烟10年以上从业人员 肺癌筛检</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281323.md#1">桃园医院教糖友正确选食物控血糖</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14347096.md#1">正确选择鞋垫 张立昌：减缓足部不适</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14347098.md#1">超萌3米巨猫来了 人气IP“橘猫重重”国庆日快闪</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14347047.md#1">桃市导入智慧科技提升工地安全 借鉴国际经验精进</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14347030.md#1">寿星齐聚 Xpark与十俱进小小生命大庆典</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14347012.md#1">张汉明及邹赐枝捐桃园救护车 完善桃园救护服务</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14347025.md#1">长庚大学携手瑞典皇家理工学院 合作学硕双联学位计划</a></li>
 <hr>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank">从大师到徒弟的传奇</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/8/5/n11431635.md#1" target="_blank">共产暴政录：盛世才与新疆的几个待解问题</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/12/9/5/n3676026.md#1" target="_blank">老警察讲的笑话让人想哭</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/4/n11234439.md#1" target="_blank">【征文】文宇：史上最公平的选官制——科举千年兴衰录（四）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/13/5/15/n3871061.md#1" target="_blank">唐恩：推崇真善忍　褒奖显人心</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14277490.md#1">故宫六百年不淹水是怎样作到的？为何纪录不保？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14277524.md#1">她的过去和现在：用舞蹈完成父亲遗愿</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/24/n14276301.md#1">台湾古典诗：杉林溪绣球花</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14277656.md#1">安宁病房护士经验谈：临终者最惊人的3件事</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/17/n14271930.md#1">大预言家的“末世预言”（下）：古今妙合共振！</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281719.md#1">【音乐】神韵乐团四、七团 音乐会选播 | 首播：2024年7月6日?晚间8:00</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/30/n14280785.md#1">【时事金扫描】美军演击沉两栖舰剑指中共075</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/29/n14280408.md#1">【时事军事】陆军战术导弹与S-500对决</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/29/n14280456.md#1">坚不可摧 美国号航母被轰炸四周仍漂浮海上</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/29/n14280484.md#1">从事副业赚钱的四个方式 年收入至少10万</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/29/n14280321.md#1">印尼拟对中国商品征收最高200%进口关税</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/28/n14279680.md#1">杨颖试水复出疑失败 节目头像被打马赛克</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/29/n14280483.md#1">唐嫣探班刘亦菲 4岁女儿被对方的热情吓坏</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/29/n14279870.md#1">金曲35完整名单 歌王MC HotDog热狗歌后孙盛希</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/28/n14279550.md#1">《非常家务事》影评：老板与妈妈谈恋爱 让女儿很头大</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/29/n14280459.md#1">巴奈致词喊勿忘天安门事件 金曲奖遭微博封杀</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281327.md#1">专家：在游轮上吃自助餐 盘子不能重复盛菜</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/30/n14280722.md#1">空服员希望乘客在飞机上别做这件事</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281364.md#1">到英国旅游数周 美国女子谈“文化冲击”</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/29/n14279585.md#1">摄影家叶书宏：心中最美的珊瑚在印尼</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/12/n14269027.md#1">破产了该怎么办？专家教你15计</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/4/n14344260.md#1">《清明上河图》化身乐高模型 打破世界纪录</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/1/n14341736.md#1">《千字文》——传世奇文，国学瑰宝</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/1/n14341684.md#1">贞观圣主（10）：指鸟为鸾 正诛佞人</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/28/n14340380.md#1">人生如戏岂堪嗟 —— 评电影《进京城》</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/1/n14342225.md#1">《对我而言，你是珍贵的》：家之所以为家</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14345929.md#1">【时事金扫描】针对中共 美军两大台海密战计划</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/3/n14343377.md#1">【环球直击】哈马斯袭击以色列一周年 各地悼念</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/6/n14345153.md#1">【百年真相】最得宋庆龄信任 此人为何寻短见？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/3/n14343180.md#1">三款SUV秋季或大幅涨价 含畅销车丰田RAV4</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/6/n14345122.md#1">红三代炫富：过生日奶奶给1.8亿 存款逾24亿</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/6/n14344939.md#1">若有1000美元闲钱 八项明智的理财生财之道</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/5/n14344745.md#1">女星李一桐搭机光脚蹭座垫 视频曝光引争议</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14346019.md#1">投资3亿 刘德华新片《危机航线》或亏2亿</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14345927.md#1">那英澳门开唱遇冷 “十一”说成“五一”惹议</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14345357.md#1">韩剧《冬季恋歌》电影版 明年秋天在日本上映</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/5/n14344719.md#1">副歌交由现场观众合唱 李玉刚遭疑“躲高音”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/6/n14344945.md#1">这一物可以让水龙头闪闪发光 你可能想不到</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14345615.md#1">如何去除家庭头号害虫——蟑螂？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/30/n14341564.md#1">苦瓜抗癌预防脂肪肝 一类人慎食</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/27/n14339916.md#1">拉筋强肌助眠 改善健康 踮脚尖五好处</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/12/28/n14145199.md#1">长者自救锻炼法 逆转骨质疏松</a></li>
 <hr>
-<strong>本文转自<a href="https://cn.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://cn.epochtimes.com/gb/24/7/1/n14281213.htm">桃彰两县市青咨委员聚首 深度交流青年政策发展</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/7/1/n14281213.htm">桃彰两县市青咨委员聚首 深度交流青年政策发展</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281213.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
